// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/git getBranchFiles(branchName) detects changed files compared to current base branch 1`] = `
Array [
  "some-new-file",
]
`;

exports[`platform/git getCommitMessages() returns commit messages 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`platform/git getFileList() should exclude submodules 1`] = `
Array [
  ".gitmodules",
  "file_to_delete",
  "master_file",
  "past_file",
]
`;

exports[`platform/git getFileList() should return the correct files 1`] = `
Array [
  "file_to_delete",
  "master_file",
  "past_file",
]
`;

exports[`platform/git initRepo()) should fetch latest 1`] = `
Array [
  "master message",
  "past message",
]
`;

exports[`platform/git initRepo()) should fetch latest 2`] = `
Array [
  "past message2",
  "master message",
]
`;
